5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1712_2497.log
== TEST (2019-05-08 14:36:47) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:37:08) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:38:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:38:14) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.33678
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:41:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend
	tempo = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:50:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora


# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:47) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora


# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:47) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora


# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:48) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora


# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:48) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora


# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:48) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora


# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:54:12) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora


# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:55:57) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora


# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:56:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora


# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:57:00) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora


# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:57:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora


# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:58:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora


# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * juros
	saldo = saldo + rend
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 20:55:08) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>=1):
	rend = saldo * juros
	saldo = saldo + rend
	t = tempo + t
	
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 20:55:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>=1):
	rend = saldo * juros
	saldo = saldo + rend
	t = tempo + t
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 21:07:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo<=1):
	rend = saldo * juros
	saldo = saldo + rend
	t = tempo + t
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 21:07:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo<=1):
	rend = saldo * juros
	saldo = saldo + rend
	tempo = tempo + t
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 21:07:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo<=1):
	rend = saldo * juros
	saldo = saldo + rend
	tempo = tempo + t
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 21:08:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo<=1):
	rend = saldo * juros
	saldo = saldo + rend
	tempo = tempo + t
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 21:09:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo<=1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	tempo = tempo + t
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:09:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo<=1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:09:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo<=1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:10:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>=1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 14:07:59) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>=1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = tempo + 1
	
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 14:08:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>=1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1
	
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:01:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>=1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + tempo
	
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:01:52) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>=1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + tempo
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:02:59) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>=1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = tempo + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:03:46) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = tempo + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:03:56) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = tempo + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:05:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	tempo = t + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:06:06) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	tempo = t + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:06:47) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	tempo = tempo + t
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:07:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	tempo = tempo + t
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:07:19) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	tempo = t + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:08:12) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	tempo = tempo + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:08:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	tempo = t + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 23:08:43) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	tempo = t + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.164373
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:09:02) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	tempo = t + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:09:02) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	tempo = t + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:09:55) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = tempo + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:10:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = tempo + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:10:37) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = tempo + 1
	tempo = t
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:10:53) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = tempo + 1
	tempo = t
   print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 19
    print(round(saldo, 2)) # Exibicao de resultados
                                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:11:00) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = tempo + 1
	tempo = t
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:30:02) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
c=0
# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:30:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
c=0
# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))


	

-- EXECUTION TIME:
0.151726
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:13:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
c=0
# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:13:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
c=0
# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:13:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
c=0
# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:13:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
c=0
# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:13:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
c=0
# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:13:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
c=0
# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:13:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 0.04
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
c=0
# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2))


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
